Version History
---------------
v11.3.24:
 * fixed maya.env, now it uses the repository relative path when something
   is referenced.

v11.3.17:
 * Fixed a little bug in mayaEnv.py

v11.3.16:
 * fixed a bug where the repository was setting the last read value of the
   server settings value to the Repository.serverPath, thus it was setting
   STALKER_REPOSITORY_PATH to the value of osx under windows, just because
   osx was the last in the settings file.

v11.3.15:
 * oyProjectMananager.models.repository.Repository now only lists projects
   with correct name formatting even they have a valid sequence inside.
 
 * oyProjectManager.models.project.Project now lists folders as sequences only
   if their name matches the sequence name formatting.

v11.3.9:
 * maya now replaces absolute paths with repository relative paths by using
   the STALKER_REPOSITORY_PATH environment variable

v11.3.3:
 * oyProjectManager.models.repository.Repository class now reads the serverPath
   variable for each of the operating systems. So it has a path for windows,
   another path for linux and another path for osx. This will let the user to
   have only one settings file valid through all over the studio.

v10.12.29
- mayaEnv: now it sets the render file format correctly to OpenExr if MentalRay
  is the current renderer

v10.12.20
- mayaEnv: fixed checking the stereoCamera rig, it is now also checking if the
  stereoCamera plugin is loaded

v10.11.20
- repository: the repository settings now can be read from another folder which
  is directed by the OYPROJECTMANAGER_PATH environment variable, also added
  tests for this change
  
- mayaEnv: while saving in maya also detects if there is a stereo camera setup
  and adds <Camera> to the render file name template

v10.10.15
- mayaEnv: the frame buffer and output format is forced to 16-bit half float
  OpenEXR if mentalray is selected as the renderer

v10.8.27
- houdiniEnv: when saving the asset, if there are any ifd (output) nodes, the