@@ -4,6 +4,9 @@ v11.3.24:
  * fixed maya.env, now it uses the repository relative path when something
    is referenced.
 
+ * fixed maya.env, the file texture paths were not correctly replaced with
+   the repository relative path.
+
 v11.3.17:
  * Fixed a little bug in mayaEnv.py
 
